<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/logo_app"
        android:src="@mipmap/ic_launcher"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_item"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/allTimeItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_time"
            android:textSize="12sp"
            android:textColor="#666" />

        <TextView
            android:id="@+id/lastTimeItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_time"
            android:textSize="12sp"
            android:textColor="#666" />

    </LinearLayout>

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="12sp"
        android:layout_marginStart="8dp" />

</LinearLayout>