<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_verification"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_statistics"
            android:layout_marginBottom="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listStatsItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>